<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pi Monitor</string>

    <string name="model_off" translatable="false">📴</string>

    <string name="cpu">CPU</string>
    <string name="cpu_usage_off">Usage: 📴</string>
    <string name="cpu_temp_off">Temperature: 📴</string>
    <string name="cpu_freq_off">Frequency: 📴</string>
    <string name="cpu_voltage_off">Voltage: 📴</string>

    <string name="cpu_usage">Usage: </string>
    <string name="cpu_temp">Temperature: </string>
    <string name="cpu_freq">Frequency: </string>
    <string name="cpu_voltage">Voltage: </string>


    <string name="gpu">GPU</string>
    <string name="gpu_freq_off">Frequency: 📴</string>
    <string name="gpu_temp_off">Temperature: 📴</string>

    <string name="gpu_freq">Frequency: </string>
    <string name="gpu_temp">Temperature: </string>


    <string name="ram">RAM</string>
    <string name="ram_usage_off">Usage: 📴</string>

    <string name="ram_usage">Usage: </string>


    <string name="sd_card">SD Card</string>
    <string name="free_storage_off">Free: 📴</string>

    <string name="free_storage">Free: </string>


    <string name="data_last_24">Data for the Last 24 Hours</string>
    <string name="total_queries">Total Queries</string>
    <string name="queries_blocked">Queries Blocked</string>
    <string name="percentage_blocked">Percentage Blocked</string>
    <string name="domains_on_adlists">Domains on AdLists</string>
    <string name="no_connection">No Connection</string>

    <string name="temperature_error">Temperature: error</string>
    <string name="usage_error">Usage: error</string>
    <string name="fequency_error">Frequency: error</string>
    <string name="voltage_error">Voltage: error</string>
    <string name="storage_error">Storage: error</string>
    <string name="model_error">Model: error</string>


    <string name="hardware">Hardware</string>
    <string name="pi_hole">Pi-hole</string>
    <string name="nas">NAS</string>


    <string name="reboot">Reboot</string>
    <string name="shutdown">Shutdown</string>
    <string name="restart_text">Do you really wish to restart?</string>
    <string name="shutdown_title">Do you really wish to shutdown?</string>
    <string name="shutdown_description">You will have to manually start the device in order to make it boot again.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="update_gravity_list">Update AdLists</string>
    <string name="restart_pihole">Restart Pi-hole</string>
    <string name="update_adlists_question">Update AdLists?</string>
    <string name="restart_pihole_question">Do you really wish to restart Pi-hole?</string>


    <string name="settings">Settings</string>
    <string name="updates">Updates</string>
    <string name="open_link">Open</string>
    <string name="version">Version:</string>
</resources>